--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "1.0.7",
     "@prisma/client": "5.3.1",
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
@@ -18,12 +19,14 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.2",
     "next": "14.2.2",
+    "next-auth": "4.23.1",
     "postcss": "8.4.38",
     "prisma": "5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.1.0",
     "tailwindcss": "3.4.3",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "zod": "3.22.2"
   }
 }
