--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/react": "18.2.79",
     "@types/react-dom": "18.2.25",
     "autoprefixer": "10.4.19",
+    "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "easymde": "^2.18.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.2",
     "next": "14.2.2",
@@ -25,7 +27,9 @@
     "prisma": "5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5",
     "zod": "3.22.2"
