--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "1.0.7",
     "@prisma/client": "5.3.1",
     "@radix-ui/themes": "^3.0.2",
