--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next-auth/prisma-adapter": "1.0.7",
     "@prisma/client": "5.3.1",
     "@radix-ui/themes": "^3.0.2",
+    "@tailwindcss/typography": "^0.5.12",
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
     "@types/react-dom": "18.2.25",
@@ -32,6 +33,7 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "react-loading-skeleton": "^3.4.0",
+    "react-markdown": "^9.0.1",
     "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5",
